refactor: IOException 제거