@@ -2,11 +2,10 @@ package tobyspring.hellospring.exRate;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.BufferedReader;
-import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.stream.Collectors;
 import tobyspring.hellospring.payment.ExRateProvider;
 
@@ -15,19 +14,29 @@ import tobyspring.hellospring.payment.ExRateProvider;
 public class WebApiExRateProvider implements ExRateProvider {
     // 의존관계
     @Override
-    public BigDecimal getExRate(String currency) throws IOException {
-        URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection(); // casting
-        BufferedReader br = new BufferedReader(new InputStreamReader(connection.getInputStream()));
-        String response = br.lines().collect(Collectors.joining());
-        br.close(); // stream은 열어주면 닫아줘야 한다.
+    public BigDecimal getExRate(String currency) {
+        try {
+            URI uri =
+                    new URI(
+                            "https://open.er-api.com/v6/latest/"
+                                    + currency); // 21부터는 URL가 아닌 URI를 사용
 
-        ObjectMapper mapper = new ObjectMapper();
-        ExRateData data = mapper.readValue(response, ExRateData.class);
+            HttpURLConnection connection =
+                    (HttpURLConnection) uri.toURL().openConnection(); // casting
+            BufferedReader br =
+                    new BufferedReader(new InputStreamReader(connection.getInputStream()));
+            String response = br.lines().collect(Collectors.joining());
+            br.close(); // stream은 열어주면 닫아줘야 한다.
 
-        System.out.println("API ExRate: " + data.rates().get("KRW"));
+            ObjectMapper mapper = new ObjectMapper();
+            ExRateData data = mapper.readValue(response, ExRateData.class);
 
-        return data.rates().get("KRW");
+            System.out.println("API ExRate: " + data.rates().get("KRW"));
+
+            return data.rates().get("KRW");
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 }
 
